--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/palash
 spring.datasource.username=root
-spring.datasource.password=Beautiful123@
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.session.store-type=jdbc
