--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/palash
+spring.datasource.url=jdbc:mysql://localhost:3306/palash
 spring.datasource.username=root
 spring.datasource.password=Beautiful123@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
